# cityu-ai

./: .gitignore  README.md  main.py  pyproject.toml  train.py  train_hog.py  train_orb.py
model/: 2024-11-08 16:48:49.224060model.pth  2024-11-08 17:07:57.990093model.pth  2024-11-08 17:22:57.833892model.pth  model.pth
