[tool.poetry]
name = "cityu-ai"
version = "0.1.0"
description = ""
authors = ["faith <jamienibtong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
torch-hog = {url = "https://github.com/Simon-Bertrand/HOG-PyTorch/archive/main.zip"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"
